--- a/css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css
+++ b/css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Black bubble';
+  src: url('../images/BLACK%20BUBBLE.ttf');
+}
+
 h1 {
   margin-top: 20px;
   margin-bottom: 10px;
