--- a/css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css
+++ b/css/stans-fantastic-project-0e3ffsdfesfa97.webflow.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Black bubble';
-  src: url('../images/BLACK%20BUBBLE.ttf');
+  src: url('../images/BLACK BUBBLE.ttf');
 }
 
 h1 {
